--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@mui/x-charts": "^7.27.1",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jwt-decode": "^2.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
